--- a/src/table/templates/table.html
+++ b/src/table/templates/table.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="uix-table-container uix-table-pre-frozen" ng-if="preFixCols" ng-style="{width: preFixWidth+'px'}">
+    <div class="uix-table-container uix-table-pre-frozen" ng-show="preFixCols" ng-style="{width: preFixWidth+'px'}">
         <div class="uix-table-header-container" ng-show="fixHead">
             <table class="uix-table">
                 <thead>
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    <div class="uix-table-container uix-table-post-frozen" ng-if="postFixCols" ng-style="{width: postFixWidth+'px'}">
+    <div class="uix-table-container uix-table-post-frozen" ng-show="postFixCols" ng-style="{width: postFixWidth+'px'}">
         <div class="uix-table-header-container" ng-show="fixHead">
             <table class="uix-table">
                 <thead>
