--- a/src/table/table.css
+++ b/src/table/table.css
@@ -1,14 +1,11 @@
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 .pull-right {
-  float: right;
-}
+  float: right; }
 
 .m-l-sm {
-  margin-left: 10px;
-}
+  margin-left: 10px; }
 
 /*  table start */
 .uix-table {
@@ -17,77 +14,31 @@
   font-size: 13px;
   border-spacing: 0;
   border-collapse: collapse;
-  background-color: #fff;
-
-  .loading-info {
-    div {
-      position: fixed;
-      left: 0;
-    }
-    .loading {
-      width: 100%;
-      min-height: 450px;
-    }
-    .loading-icon {
-      top: 45%;
-      left: 50%;
-      font-size: 30px;
-      margin-left: -15px;
-      position: absolute;
-    }
-    .error-tip {
-      min-height: 450px;
-    }
-    .error-text {
-      top: 50%;
-      left: 50%;
-      font-size: 30px;
-      margin-top: -30px;
-      margin-left: -90px;
-      position: absolute;
-    }
-  }
-
-  tbody tr {
-    line-height: 30px;
-  }
-
-  tr:nth-of-type(odd) {
-    background-color: #fafbfc;
-  }
-
-  th, td {
+  background-color: #fff; }
+  .uix-table tbody tr {
+    line-height: 30px; }
+  .uix-table tr:nth-of-type(odd) {
+    background-color: #fafbfc; }
+  .uix-table th, .uix-table td {
     padding: 8px 15px;
     text-align: left;
     vertical-align: top;
-    border-top: 1px solid #eaeff0;
-    &.text-center {
-      text-align: center;
-    }
-    &.text-right {
-      text-align: right;
-    }
-  }
-
-  // Bottom align for column headings
-  > thead > tr > th {
+    border-top: 1px solid #eaeff0; }
+    .uix-table th.text-center, .uix-table td.text-center {
+      text-align: center; }
+    .uix-table th.text-right, .uix-table td.text-right {
+      text-align: right; }
+  .uix-table > thead > tr > th {
     vertical-align: bottom;
-    border-bottom: 2px solid #eaeff0;
-  }
-
-  // Remove top border from thead by default
-  > caption + thead,
-  > colgroup + thead,
-  > thead:first-child {
-    > tr:first-child {
-      > th,
-      > td {
-        border-top: 0;
-      }
-    }
-  }
-
-  .btn {
+    border-bottom: 2px solid #eaeff0; }
+  .uix-table > caption + thead > tr:first-child > th,
+  .uix-table > caption + thead > tr:first-child > td,
+  .uix-table > colgroup + thead > tr:first-child > th,
+  .uix-table > colgroup + thead > tr:first-child > td,
+  .uix-table > thead:first-child > tr:first-child > th,
+  .uix-table > thead:first-child > tr:first-child > td {
+    border-top: 0; }
+  .uix-table .btn {
     outline: none;
     font-weight: 500;
     border-radius: 2px;
@@ -95,90 +46,59 @@
     border-color: #dee5e7;
     background-color: #fcfdfd;
     border-bottom-color: #d8e1e3;
-    box-shadow: 0 1px 1px rgba(90, 90, 90, 0.1);
-    &:hover, &:active {
+    box-shadow: 0 1px 1px rgba(90, 90, 90, 0.1); }
+    .uix-table .btn:hover, .uix-table .btn:active {
       color: #58666e;
       border-color: #c7d3d6;
-      background-color: #edf1f2;
-    }
-  }
-
-  &.table-bordered {
-    border: 1px solid #eaeff0;
-
-    th, td {
-      border: 1px solid #eaeff0;
-    }
-
-    thead {
-      th, td {
-        border-bottom-width: 2px;
-      }
-    }
-  }
-}
+      background-color: #edf1f2; }
+  .uix-table.table-bordered {
+    border: 1px solid #eaeff0; }
+    .uix-table.table-bordered th, .uix-table.table-bordered td {
+      border: 1px solid #eaeff0; }
+    .uix-table.table-bordered thead th, .uix-table.table-bordered thead td {
+      border-bottom-width: 2px; }
 
 .uix-table-box {
   overflow: hidden;
-  position: relative;
-}
+  position: relative; }
 
 .uix-table-pre-frozen {
   position: absolute;
   left: 0;
-  top: 0;
-
-  &.show-shadow {
-    box-shadow: 6px 0 6px -4px rgba(0, 0, 0, .15);
-  }
-
-  .uix-table-body-container::-webkit-scrollbar {
-    display: none
-  }
-}
+  top: 0; }
+  .uix-table-pre-frozen.show-shadow {
+    box-shadow: 6px 0 6px -4px rgba(0, 0, 0, 0.15); }
+  .uix-table-pre-frozen .uix-table-body-container::-webkit-scrollbar {
+    display: none; }
 
 .uix-table-post-frozen {
   position: absolute;
   right: 0;
-  top: 0;
-
-  &.show-shadow {
-    box-shadow: -6px 0 6px -4px rgba(0, 0, 0, .15);
-  }
-  .uix-table-body-container::-webkit-scrollbar {
-    display: none
-  }
-}
+  top: 0; }
+  .uix-table-post-frozen.show-shadow {
+    box-shadow: -6px 0 6px -4px rgba(0, 0, 0, 0.15); }
+  .uix-table-post-frozen .uix-table-body-container::-webkit-scrollbar {
+    display: none; }
 
 .uix-table-container {
-  overflow-x: scroll;
-}
+  overflow-x: scroll; }
 
-.uix-table-header-container {
-  .uix-table {
-    > thead > tr > th {
-      border-bottom: 1px solid #eaeff0;
-    }
-  }
-}
+.uix-table-header-container .uix-table > thead > tr > th {
+  border-bottom: 1px solid #eaeff0; }
 
 .uix-table-body-container {
-  overflow-y: scroll;
-}
+  overflow-y: scroll; }
 
 /*  table end */
-
 /*  pagenation start*/
 .pagination {
   display: inline-block;
   margin: 0;
   padding-left: 0;
-  border-radius: 4px
-}
+  border-radius: 4px; }
 
 .pagination > li {
-  display: inline
-}
+  display: inline; }
 
 .pagination > li > a, .pagination > li > span {
   position: relative;
@@ -189,111 +109,91 @@
   color: #337ab7;
   text-decoration: none;
   background-color: #fff;
-  border: 1px solid #ddd
-}
+  border: 1px solid #ddd; }
 
 .pagination > li:first-child > a, .pagination > li:first-child > span {
   margin-left: 0;
   border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px
-}
+  border-bottom-left-radius: 4px; }
 
 .pagination > li:last-child > a, .pagination > li:last-child > span {
   border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px
-}
+  border-bottom-right-radius: 4px; }
 
 .pagination > li > a:focus, .pagination > li > a:hover, .pagination > li > span:focus, .pagination > li > span:hover {
   z-index: 2;
   color: #23527c;
   background-color: #eee;
-  border-color: #ddd
-}
+  border-color: #ddd; }
 
 .pagination > .active > a, .pagination > .active > a:focus, .pagination > .active > a:hover, .pagination > .active > span, .pagination > .active > span:focus, .pagination > .active > span:hover {
   z-index: 3;
   color: #fff;
   cursor: default;
   background-color: #337ab7;
-  border-color: #337ab7
-}
+  border-color: #337ab7; }
 
 .pagination > .disabled > a, .pagination > .disabled > a:focus, .pagination > .disabled > a:hover, .pagination > .disabled > span, .pagination > .disabled > span:focus, .pagination > .disabled > span:hover {
   color: #777;
   cursor: not-allowed;
   background-color: #fff;
-  border-color: #ddd
-}
+  border-color: #ddd; }
 
 .pagination-lg > li > a, .pagination-lg > li > span {
   padding: 10px 16px;
   font-size: 18px;
-  line-height: 1.3333333
-}
+  line-height: 1.3333333; }
 
 .pagination-lg > li:first-child > a, .pagination-lg > li:first-child > span {
   border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px
-}
+  border-bottom-left-radius: 6px; }
 
 .pagination-lg > li:last-child > a, .pagination-lg > li:last-child > span {
   border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px
-}
+  border-bottom-right-radius: 6px; }
 
 .pagination-sm > li > a, .pagination-sm > li > span {
   padding: 5px 10px;
   font-size: 12px;
-  line-height: 1.5
-}
+  line-height: 1.5; }
 
 .pagination-sm > li:first-child > a, .pagination-sm > li:first-child > span {
   border-top-left-radius: 3px;
-  border-bottom-left-radius: 3px
-}
+  border-bottom-left-radius: 3px; }
 
 .pagination-sm > li:last-child > a, .pagination-sm > li:last-child > span {
   border-top-right-radius: 3px;
-  border-bottom-right-radius: 3px
-}
+  border-bottom-right-radius: 3px; }
 
 .pager {
   padding-left: 0;
   margin: 20px 0;
   text-align: center;
-  list-style: none
-}
+  list-style: none; }
 
 .pager li {
-  display: inline
-}
+  display: inline; }
 
 .pager li > a, .pager li > span {
   display: inline-block;
   padding: 5px 14px;
   background-color: #fff;
   border: 1px solid #ddd;
-  border-radius: 15px
-}
+  border-radius: 15px; }
 
 .pager li > a:focus, .pager li > a:hover {
   text-decoration: none;
-  background-color: #eee
-}
+  background-color: #eee; }
 
 .pager .next > a, .pager .next > span {
-  float: right
-}
+  float: right; }
 
 .pager .previous > a, .pager .previous > span {
-  float: left
-}
+  float: left; }
 
 .pager .disabled > a, .pager .disabled > a:focus, .pager .disabled > a:hover, .pager .disabled > span {
   color: #777;
   cursor: not-allowed;
-  background-color: #fff
-}
+  background-color: #fff; }
 
 /*  pagenation start*/
-
